# voxbeowulf

./: .cursorignore  .cursorrules  .flake8  .gitignore  .pre-commit-config.yaml  LICENSE.md  README.md  __init__.py  heorot.py  numbering.py  pyproject.toml  requirements.txt  test_constraints.py
archive/: Pipfile  Procfile  README.md  manage.py  package-lock.json  package.json
archive/data/: aligned.txt  analytical_lexicon.txt  ebeowulf.txt  glossary.txt  heorot.txt  mcmaster.txt  mit.txt  oldenglishaerobics.txt  perseus.txt
archive/data/subtitles/: blank.ass  fitt_0.ass  fitt_1.ass  fitt_10.ass  fitt_11.ass  fitt_12.ass  fitt_13.ass  fitt_14.ass  fitt_15.ass  fitt_16.ass  fitt_17.ass  fitt_18.ass  fitt_19.ass  fitt_2.ass  fitt_20.ass  fitt_21.ass  fitt_22.ass  fitt_23.ass  fitt_24.ass  fitt_25.ass  fitt_26.ass  fitt_27.ass  fitt_28.ass  fitt_3.ass  fitt_30.ass  fitt_31.ass  fitt_32.ass  fitt_33.ass  fitt_34.ass  fitt_35.ass  fitt_36.ass  fitt_37.ass  fitt_38.ass  fitt_39.ass  fitt_4.ass  fitt_40.ass  fitt_41.ass  fitt_42.ass  fitt_43.ass  fitt_5.ass  (+4 more)
archive/fixtures/: sites.json
archive/readbeowulf/: __init__.py  apps.py  audio.py  models.py  settings.py  urls.py  views.py  wsgi.py
archive/readbeowulf/migrations/: 0001_initial.py  0002_audio.py
archive/readbeowulf/templates/: _account_bar.html  _footer.html  homepage.html  lemma.html  read.html  site_base.html  vocab.html
archive/static/src/js/: index.js
data/: blank.ass
data/fitts/: maintext.csv  maintext.html  maintext.json
data/subtitles/: fitt_0.ass  fitt_1.ass  fitt_10.ass  fitt_11.ass  fitt_12.ass  fitt_13.ass  fitt_14.ass  fitt_15.ass  fitt_16.ass  fitt_17.ass  fitt_18.ass  fitt_19.ass  fitt_2.ass  fitt_20.ass  fitt_21.ass  fitt_22.ass  fitt_23.ass  fitt_25.ass  fitt_26.ass  fitt_27.ass  fitt_28.ass  fitt_29.ass  fitt_3.ass  fitt_30.ass  fitt_31.ass  fitt_32.ass  fitt_33.ass  fitt_34.ass  fitt_35.ass  fitt_36.ass  fitt_37.ass  fitt_38.ass  fitt_39.ass  fitt_4.ass  fitt_40.ass  fitt_41.ass  fitt_42.ass  fitt_43.ass  fitt_5.ass  fitt_6.ass  (+3 more)
tests/: __init__.py  test_constraints.py  test_fitts.py
(+14 files in other folders)
